--- a/plugins/MultiCamera/src/org/micromanager/multicamera/MultiCameraFrame.form
+++ b/plugins/MultiCamera/src/org/micromanager/multicamera/MultiCameraFrame.form
@@ -68,7 +68,7 @@
                           <Component id="TriggerComboBox" min="-2" pref="105" max="-2" attributes="0"/>
                           <Component id="ModeComboBox" min="-2" pref="105" max="-2" attributes="0"/>
                           <Component id="GainComboBox" min="-2" pref="105" max="-2" attributes="0"/>
-                          <Component id="jCheckBox2" min="-2" max="-2" attributes="0"/>
+                          <Component id="EMCheckBox" min="-2" max="-2" attributes="0"/>
                           <Component id="EMGainTextField" min="-2" pref="49" max="-2" attributes="0"/>
                           <Component id="FrameTransferComboBox" min="-2" pref="105" max="-2" attributes="0"/>
                           <Component id="BinningComboBox" min="-2" pref="80" max="-2" attributes="0"/>
@@ -78,9 +78,9 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="jButton2" min="-2" max="-2" attributes="0"/>
+                                      <Component id="ROISetButton" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace min="8" pref="8" max="8" attributes="0"/>
-                                      <Component id="jButton3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="ROIUnsetButton" min="-2" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -125,8 +125,8 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButton2" min="-2" pref="20" max="-2" attributes="0"/>
-                          <Component id="jButton3" min="-2" pref="20" max="-2" attributes="0"/>
+                          <Component id="ROISetButton" min="-2" pref="20" max="-2" attributes="0"/>
+                          <Component id="ROIUnsetButton" min="-2" pref="20" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="2" pref="2" max="2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -149,7 +149,7 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="45" pref="45" max="45" attributes="0"/>
-                              <Component id="jCheckBox2" min="-2" max="-2" attributes="0"/>
+                              <Component id="EMCheckBox" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="25" pref="25" max="25" attributes="0"/>
@@ -177,7 +177,7 @@
         <Property name="text" type="java.lang.String" value="ROI"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton2">
+    <Component class="javax.swing.JButton" name="ROISetButton">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/micromanager/icons/shape_handles.png"/>
@@ -194,10 +194,10 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ROISetButtonActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton3">
+    <Component class="javax.swing.JButton" name="ROIUnsetButton">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/org/micromanager/icons/arrow_out.png"/>
@@ -214,7 +214,7 @@
         </Property>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ROIUnsetButtonActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
@@ -346,7 +346,7 @@
         <Property name="text" type="java.lang.String" value="Speed"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JCheckBox" name="jCheckBox2">
+    <Component class="javax.swing.JCheckBox" name="EMCheckBox">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Lucida Grande" size="10" style="0"/>
@@ -354,7 +354,7 @@
         <Property name="text" type="java.lang.String" value="Use"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCheckBox2ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="EMCheckBoxActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="GainComboBox">
