Improvements in script interface to new image viewer
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5726 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
+++ b/mmstudio/src/org/micromanager/acquisition/HyperstackControls.form
@@ -57,7 +57,7 @@
                   <Component id="abortButton" alignment="0" max="32767" attributes="1"/>
                   <Component id="pauseAndResumeToggleButton" alignment="0" max="32767" attributes="1"/>
               </Group>
-              <EmptySpace pref="20" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
