Made Snap button kind of work with 2 cameras in MultiCamera plugin
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@5731 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/plugins/MultiCamera/src/org/micromanager/multicamera/MultiCameraFrame.form
+++ b/plugins/MultiCamera/src/org/micromanager/multicamera/MultiCameraFrame.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <NonVisualComponents>
@@ -506,6 +506,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Live"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="LiveButtonActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
