fix appearance of minus button
git-svn-id: https://valelab.ucsf.edu/svn/micromanager2/trunk@6146 d0ab736e-dc22-4aeb-8dc9-08def0aa14fd

--- a/mmstudio/src/org/micromanager/acquisition/ChannelControlPanel.form
+++ b/mmstudio/src/org/micromanager/acquisition/ChannelControlPanel.form
@@ -35,7 +35,7 @@
                           <Component id="fullButton" alignment="0" min="-2" pref="40" max="-2" attributes="1"/>
                           <Group type="102" alignment="0" attributes="1">
                               <Component id="zoomInButton" min="-2" pref="21" max="-2" attributes="0"/>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="0" max="-2" attributes="0"/>
                               <Component id="zoomOutButton" min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                           <Component id="autoButton" alignment="0" min="-2" pref="40" max="-2" attributes="1"/>
@@ -61,11 +61,12 @@
                   </Group>
                   <Component id="colorPickerLabel" alignment="0" min="-2" pref="18" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="zoomInButton" min="-2" pref="15" max="-2" attributes="0"/>
                   <Component id="zoomOutButton" min="-2" pref="15" max="-2" attributes="0"/>
+                  <Component id="zoomInButton" alignment="0" min="-2" pref="15" max="-2" attributes="0"/>
               </Group>
+              <EmptySpace min="-2" max="-2" attributes="0"/>
           </Group>
           <Component id="histogramPanelHolder" alignment="0" min="-2" pref="100" max="-2" attributes="3"/>
       </Group>
